--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,7 +43,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li > <% if signed_in? %>
-          <%= link_to "Sign Out", sign_out_path, method: :delete, :class => "navtext" %>
+          <%= link_to "Sign Out", sign_out_path, method: :delete, :class => "btn btn-default-outline", :style => "margin: 5px; padding 5px;"%>
           <% end %></li>  
       </ul>
     </div><!-- /.navbar-collapse -->
