--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,40 +1,83 @@
+<nav class="navbar navbar-default ">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <% if signed_in? %>
+             <%= image_tag @user.avatar.thumb.to_s, :class => "round" %> 
+          <% else %>
+            <%= link_to "Sign in", sign_in_path, :class => "navbar" %>
+          <% end %>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav" id="listingNav">
+        <li> <%= link_to "Home", root_path %> 
+        <li ><% if signed_in? %>
+            <%= link_to "Your Profile", edit_user_path(current_user.id) %> 
+            <% else %>
+            <%= link_to "Sign in", sign_in_path %>
+          <% end %></li>
+        <li><% if signed_in? %>
+        <%= link_to "Parking Spots", user_listings_path(current_user.id) %> 
+        <% end %></li>
+        <li><% if signed_in? %>
+        <%= link_to "List Your Spot", new_user_listing_path(current_user.id) %> 
+        <% end %></li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right" id="listingNav">
+        <li > <% if signed_in? %>
+          <%= link_to "Sign Out", sign_out_path, method: :delete, :class => "btn btn-danger-outline", :style => "margin: 5px; padding 5px;" %>
+          <% end %></li>  
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 
 
-<div class="table">
-    <table class="table table-hover" align="center" id="table">
-      <tr>
-        <th> Type </th>  
-        <th> Address </th>
-         <th> City </th>
-         <th> Price </th>
-         <th> Thumbnail </th>
-         <th> Park! </th>
-      </tr>
-      <% @listings.each do |x| %>
-      <div>
-          <tr>
-           <td> <%= x.title %> </td>
-           <td> <%= x.address %> </td>
-           <td> <%= x.city %> </td>
-           <td> $ <%= x.price %> </td>
-            <% if x.photos.any?  %>
-                <td> <%= image_tag x.photos[0].thumb.to_s, class:"img-responsive" %>  
-                <% end %> </td>            
-           <td> <%= link_to "Park!", user_listing_path(id: x.id), :class => "btn btn-primary"  %></td>
 
-          </tr>
-        </div>
-      <% end %>
-    </table>
+<div class="listingIndex">     
+  <div class="rows " >  
+    <% @listings.each do |x| %> 
+      <div class="col-sm-3 ">
+       
+         <h5> <%= x.title %> </h5>
+         <h5> <%= x.address %> </h5>
+
+
+        <% if x.photos.any?  %>
+            <%= image_tag x.photos[0].thumb.to_s, class:"img-responsive" %>  
+            <% end %>
+         <h5> <%= x.city %> $ <%= x.price %></h5>
+         <h5>  </h5>
+      
+        
+       
+         
+      <%= link_to "Park!", user_listing_path(id: x.id), :class => "btn btn-danger btn-block" %>             
+        
+      </div>
+
+
+  <% end %> 
+
+    </div>
   </div>
- </div>
+   
+<div> 
+  <div id="inner">
+    <%= will_paginate @posts %>
   </div>
-  <%= will_paginate @posts %>
-
-
-  <!-- #@user.avatar.thumb.to_s -->
+</div>
    
    
-  </div>
+
 
