--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -54,6 +54,7 @@
 <div class="hero-header">
   <h1 class="main-text">Free Parking</h1>
   <h2 class="sub-text">"Parking has never been so easy!"</h2>
+  <%= link_to "Make Payment", braintree_new_path %>
 
  <div class="searchbar"> <!-- start of search bar -->
   <div class="rows">
