--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default ">
+<nav class="navbar navbar-default " >
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -31,7 +31,7 @@
         <%= link_to "List Your Spot", new_user_listing_path(current_user.id) %> 
         <% end %></li>
       </ul>
-      
+    
       <ul class="nav navbar-nav navbar-right" id="listingNav">
         <li > <% if signed_in? %>
           <%= link_to "Sign Out", sign_out_path, method: :delete, :class => "btn btn-danger-outline", :style => "margin: 5px; padding 5px;" %>
@@ -44,54 +44,112 @@
 <div class="container-fluid" id="showContainer">
   <div class="rows">
     <div class="col-md-3" id="parkingShow2">
-      <h1 style="color: #008489;"> Park Here! </h1>
-        <h4>Parking type: <%= @listing.title %></h6> 
-        <h4>Address: <%= @listing.address %></h6>  
-        <h4>City: <%= @listing.city %></h6>  
-        <h4>Price per Hour: $<%= @listing.price %></h6> 
-        <%= render partial: "/reservations/form"%> 
-    </div>
-    <div class="col-md-9" id="carouselborder">
-      
-    
+          <h1 style="color: #008489;"> Park Here! </h1>
+            <h4>Parking type: <%= @listing.title %></h6> 
+            <h4>Address: <%= @listing.address %></h6>  
+            <h4>City: <%= @listing.city %></h6>  
+            <h4>Price per Hour: $<%= @listing.price %></h6> 
+            <%= render partial: "/reservations/form"%> 
+        </div>
 
-
+<div class="col-md-9" id="carouselborder">
 <% if @listing.photos.any?  %>           
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-
-  <div class="carousel-inner">
-    <div class="item active">
-       <%= image_tag @listing.photos.first %> 
-    </div>
-      <% @listing.photos.shift %> 
-      <% @listing.photos.each do |photo| %> 
-    <div class="item">
-     <%= image_tag photo  %>
-    </div>
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+           <%= image_tag @listing.photos.first %> 
+        </div>
+          <% @listing.photos.shift %> 
+          <% @listing.photos.each do |photo| %> 
+        <div class="item">
+         <%= image_tag photo  %>
+        </div>
+          <% end %> 
+      </div>
+      <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
       <% end %> 
+    </div>
+    
   </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
-  <% end %> 
 
-  </div>
+
+
+<div class="row">
+    <div class="col-md-offset-2 col-md-8" id="map" > 
+ 
+</div>
+
+  
+
    
-  </div>
 </div>
+
+  <!-- <script src="script.js"></script> -->
+  <script async defer                                  
+          src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['API_key']%>&callback=initialize"></script>
+
+<script> 
+            
+  var address = "<%= @listing.address %>, <%= @listing.city %>";
+  var geocoder;
+  var map;
+  function initialize() {
+    geocoder = new google.maps.Geocoder();
+    var latlng = new google.maps.LatLng(47.608013, -122.335167);
+    var mapOptions = {
+      zoom: 15,
+      center: latlng
+    }
+    map = new google.maps.Map(document.getElementById('map'), mapOptions);
+    // var address = document.getElementById('address').value;
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == 'OK') {
+        map.setCenter(results[0].geometry.location);
+        var marker = new google.maps.Marker({
+            map: map,
+            position: results[0].geometry.location
+        });
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+
+  function codeAddress() {
+    var address = document.getElementById('address').value;
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == 'OK') {
+        map.setCenter(results[0].geometry.location);
+        var marker = new google.maps.Marker({
+            map: map,
+            position: results[0].geometry.location
+        });
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+
+
+  </script>
+
+
+
+
