--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -128,13 +128,15 @@
  
 #parkingShow2{
   
-  margin-top: 4em;
+  border-right: 2px solid;
+  border-color: grey;
+
 } 
 
 #carouselborder {
-
- border-left: 2px solid;
-  border-color: grey;
+/*margin-top: 4em;*/
+/* border-left: 2px solid;
+  border-color: grey;*/
 }
 
 #parkingShow{
@@ -164,7 +166,8 @@
 }
 
 #map {
-  height: 60vh;
+  height: 63vh;
+  width: 100vh;
 }
 
 /*----- listing/show button -----*/
@@ -200,6 +203,7 @@
 
 #showContainer {
   background-color: white;
+
 }
 /*----- Menu -----*/
   .menu {
