changed file storage to aws

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -14,7 +14,6 @@
             <%= link_to "Sign in", sign_in_path, :class => "navbar" %>
           <% end %>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" id="listingNav">
@@ -52,7 +51,7 @@
           
             <div  id="map" "></div>
       </div>
-        
+     </div>   
         
 
 <div class="col-md-5" id="carouselborder">
