--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -59,39 +59,19 @@
  <div class="searchbar"> <!-- start of search bar -->
   <div class="rows">
     <div class="col-md-12">
+      <div class="form-inline">
             <div class="input-group" id="adv-search">
-                <input type="text" class="form-control" placeholder="Find a Parking Spot!" />
-                <div class="input-group-btn">
-                    <div class="btn-group" role="group">
-                        <div class="dropdown dropdown-lg">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
-                            <div class="dropdown-menu dropdown-menu-right" role="menu">
-                                <form class="form-horizontal" role="form">
-                                  <div class="form-group">
-                                    <label for="filter">Filter by</label>
-                                    <select class="form-control">
-                                        <option value="0" selected>Parking Type</option>
-                                        <option value="1">Street Parking</option>
-                                        <option value="2">Private Driveway</option>
-                                        <option value="3">Parking Garage</option>
-                                    </select>
-                                  </div>
-                                  <div class="form-group">
-                                    <label for="contain">Author</label>
-                                    <input class="form-control" type="text" />
-                                  </div>
-                                  <div class="form-group">
-                                    <label for="contain">Contains the words</label>
-                                    <input class="form-control" type="text" />
-                                  </div>
-                                  <button type="submit" class="btn btn-primary"><i class="fa fa-car" aria-hidden="true"></i> </span></button>
-                                </form>
-                            </div>
-                        </div>
-                        <button type="button" class="btn btn-danger"><i class="fa fa-car" aria-hidden="true"></i></button>
-                    </div>
+
+              <%= form_tag user_listings_path(current_user),  :method => 'get', id: "search-form" do %>
+              <%= text_field_tag :search,  params[:search],  :placeholder => "Enter a City to Get Started!", :class =>"form-control", :style => "width: 300px;" %>
+              <span class="input-group-btn">
+              <%= submit_tag "Search", class: "btn btn-danger" %>
+              </span>
+            <% end %>
+
+
+
                 </div>
-            </div>
           </div>
         </div>
   </div>
