--- a/app/views/braintree/new.html.erb
+++ b/app/views/braintree/new.html.erb
@@ -3,26 +3,198 @@
                     <!-- Load the Hosted Fields component. -->
 <script src="https://js.braintreegateway.com/web/3.6.3/js/hosted-fields.min.js"></script>
 
-<div class="demo-frame">
 
-  <%= form_for :checkout_form, url: braintree_checkout_path, html: { id: "cardForm"} do |form| %>
 
-    <%= form.label :card_number, "Credit Card Number", html: {class: "hosted-fields--label"} %>
-    <div id="card-number" class="hosted-field"></div>
-
-    <%= form.label :expiration_date, "Expiration Date", html: {class: "hosted-fields--label"} %>
-    <div id="expiration-date" class="hosted-field"></div>
-
-    <%= form.label :cvv, "CVV", html: {class: "hosted-fields--label"} %>
-    <div id="cvv" class="hosted-field"></div>
-
-    <%= form.hidden_field "payment_method_nonce" %>
-
-    <div class="button-container">
-      <%= form.submit "Purchase", disabled: true, class: "btn btn-primary", id: "submit-payment-btn" %>
+<nav class="navbar navbar-default " >
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <% if signed_in? %>
+             <%= image_tag current_user.avatar.thumb.to_s, :class => "round" %> 
+          <% else %>
+            <%= link_to "Sign in", sign_in_path, :class => "navbar" %>
+          <% end %>
     </div>
-  <% end %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav" id="listingNav">
+        <li> <%= link_to "Home", root_path(current_user.id) %> 
+        <li ><% if signed_in? %>
+            <%= link_to "Your Profile", edit_user_path(current_user.id) %> 
+            <% else %>
+            <%= link_to "Sign in", sign_in_path %>
+          <% end %></li>
+        <li><% if signed_in? %>
+        <%= link_to "Parking Spots", user_listings_path(current_user.id) %> 
+        <% end %></li>
+        <li><% if signed_in? %>
+        <%= link_to "List Your Spot", new_user_listing_path(current_user.id) %> 
+        <% end %></li>
+      </ul>
+    
+      <ul class="nav navbar-nav navbar-right" id="listingNav">
+        <li > <% if signed_in? %>
+          <%= link_to "Sign Out", sign_out_path, method: :delete, :class => "btn btn-danger-outline", :style => "margin: 5px; padding 5px;" %>
+          <% end %></li>  
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container-fluid" id="showContainer">
+  <div class="row">
+    <div class="col-md-7" id="parkingShow2">
+         <!-- <div class="affix"> -->
+          <h4>Parking type: <%= @listing.title %></h4> 
+            <h4>Address: <%= @listing.address %></h4>  
+            <h4>City: <%= @listing.city %></h4>  
+            <h4>Price per Hour: $<%= @listing.price %></h4> 
+          
+            <div  id="map" "></div>
+      </div>
+       
+        
+
+<div class="col-md-5" id="carouselborder">
+ 
+  <div class="demo-frame">
+
+    <%= form_for :checkout_form, url: braintree_checkout_path, html: { id: "cardForm"} do |form| %>
+
+      <%= form.label :card_number, "Credit Card Number", html: {class: "hosted-fields--label"} %>
+      <div id="card-number" class="hosted-field"></div>
+
+      <%= form.label :expiration_date, "Expiration Date", html: {class: "hosted-fields--label"} %>
+      <div id="expiration-date" class="hosted-field"></div>
+
+      <%= form.label :cvv, "CVV", html: {class: "hosted-fields--label"} %>
+      <div id="cvv" class="hosted-field"></div>
+
+      <%= form.hidden_field "payment_method_nonce" %>
+
+      <div class="button-container">
+        <%= form.submit "Purchase", disabled: true, class: "btn btn-primary", id: "submit-payment-btn" %>
+      </div>
+    <% end %>
+  </div>
+ <br>
+
+<% if @listing.photos.any?  %>           
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+           <%= image_tag @listing.photos.first %> 
+        </div>
+          <% @listing.photos.shift %> 
+          <% @listing.photos.each do |photo| %> 
+        <div class="item">
+         <%= image_tag photo  %>
+        </div>
+          <% end %> 
+      </div>
+      <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <% end %> 
+    </div>    
+  </div>
+</div>   
 </div>
+</div> 
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['API_key']%>&callback=initialize"></script>
+
+<script> 
+            
+  var address = "<%= @listing.address %>, <%= @listing.city %>";
+  var geocoder;
+  var map;
+  function initialize() {
+    geocoder = new google.maps.Geocoder();
+    var latlng = new google.maps.LatLng(47.608013, -122.335167);
+    var mapOptions = {
+      zoom: 15,
+      center: latlng
+    }
+    map = new google.maps.Map(document.getElementById('map'), mapOptions);
+    // var address = document.getElementById('address').value;
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == 'OK') {
+        map.setCenter(results[0].geometry.location);
+        var marker = new google.maps.Marker({
+            map: map,
+            position: results[0].geometry.location
+        });
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+
+  function codeAddress() {
+    var address = document.getElementById('address').value;
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == 'OK') {
+        map.setCenter(results[0].geometry.location);
+        var marker = new google.maps.Marker({
+            map: map,
+            position: results[0].geometry.location
+        });
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
