--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,10 +9,10 @@
         <span class="icon-bar"></span>
       </button>
       <% if signed_in? %>
-             <%= image_tag @user.avatar.thumb.to_s, :class => "round" %> 
-          <% else %>
-            <%= link_to "Sign in", sign_in_path, :class => "navbar" %>
-          <% end %>
+        <%= image_tag @user.avatar.thumb.to_s, :class => "round" %> 
+        <% else %>
+         <%= link_to "Sign in", sign_in_path, :class => "navbar" %>
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,64 +44,64 @@
 <div class="container">
 <div class="row">
   <div class="col-md-3" id="parkingShow">
+    <% provide(:title, "Edit user") %>
+    <h1 style="color: #008489;">Your profile</h1>
+    <h5 style="color: grey;">You can update your profile by altering the following fields.</h5>
 
+      <!-- <div class="form-group"> -->
+        <%= form_for @user, url: user_path, :html => {:multipart => true} do |f| %>
 
+          <%= f.label :name %><br>
+          <%= f.text_field :name, :class => "form-control" %><br>
 
-<% provide(:title, "Edit user") %>
-<h1 style="color: #008489;">Your profile</h1>
-<h5 style="color: grey;">You can update your profile by altering the following fields.</h5>
+          <%= f.label :email %><br>
+          <%= f.email_field :email, :class => "form-control" %><br>
 
-  <!-- <div class="form-group"> -->
-    <%= form_for @user, url: user_path, :html => {:multipart => true} do |f| %>
+          <%= f.label :avatar %><br>
+          <%= image_tag @user.avatar.thumb.to_s, :class => "round form" %> <br><br>
 
-      <%= f.label :name %><br>
-      <%= f.text_field :name, :class => "form-control" %><br>
-
-      <%= f.label :email %><br>
-      <%= f.email_field :email, :class => "form-control" %><br>
-
-      <%= f.label :avatar %><br>
-      <%= image_tag @user.avatar.thumb.to_s, :class => "round form" %> <br><br>
-
-      <%= f.file_field :avatar, :class => "form-control" %><br>
-  <!-- </div> -->
-      <%= f.submit "Update Profile", :class => "btn btn-danger-outline btn-block"%>
-    <% end %>
-
-
-  </div>
-
-
-
+          <%= f.file_field :avatar, :class => "form-control" %><br>
+      <!-- </div> -->
+          <%= f.submit "Update Profile", :class => "btn btn-danger-outline btn-block"%>
+        <% end %>
+    </div>
 
 <div class="row">
-  <div class="col-md-6 ">
-
-<h1 style="color: #008489;">Your Parking History</h1>
-   <% @parking_history = Reservation.where(user_id: current_user) %>
-  
-<div class="rows">
-   <% @parking_history.each do |x| %>
-           <div class="col-md-6 ">
+  <div class="col-md-8 ">
+    <h1 style="color: #008489;">Your Parking History</h1>
+       <% @parking_history = Reservation.where(user_id: current_user) %>
+      
+    <div class="rows">
+       <% @parking_history.each do |x| %>
+        <div class="col-md-5 ">   
+         <% listing_history = Listing.where(id: x.listing_id) %>
+          <% listing_history.each do |y| %>
+          <h5 style="color: grey;"><%= y.title %>, <%= y.address %> </h5>
+          <h5 style="color: grey;"><%= y.city %>, $<%= y.price %> </h5>
            
-           <% listing_history = Listing.where(id: x.listing_id) %>
-            <% listing_history.each do |y| %>
-           <h5 style="color: grey;"><%= y.title %>, <%= y.address %>, <%= y.city %>, $<%= y.price %> </h5>
-             
-              
-           
-           <p style="color: grey;">Parked on: <%= x.startdate.strftime('%d %b %y') %> </p>
-       
-           <p style="color: grey;"> Hours: <%= x.total_price.hours / 36000 %> Total: $<%= x.total_price %> </p>
-          <% #byebug %>
+            <p style="color: grey;">Parked on: <%= x.startdate.strftime('%d %b %y') %> </p>
+        
+            <p style="color: grey;"> Hours: <%= x.total_time  %> Total: $<%= x.total_price %> </p>
             <%= image_tag y.photos[0].thumb.to_s, class:"img-responsive" %> 
               <% if (x.startdate - Time.now) > 0 %>
-               <%= link_to "Delete", user_reservation_path(user_id: current_user, id: x.id), method: :delete %> 
+                <%= link_to "Delete", user_reservation_path(user_id: current_user, id: x.id), method: :delete %> 
               <% end %>
           <% end %> 
         </div>
       <% end %>
-</div>
-</div>
-</div>
+      <div class="rows">
+            <div class="col-md-12 "> 
+        <h1 style="color: #008489;">Your Listed Spaces</h1>
+          <% @userlisting = Listing.where(user_id: current_user) %>
+
+           <% @userlisting.each do |x| %>    
+              <h5 style="color: grey;"><%= x.title %>, <%= x.address %>, <%= x.city %>, $<%= x.price %> </h5>
+              <% if x.photos.any?  %>
+                <%= image_tag x.photos[0], class:"img-responsive" %> 
+              <% end %> 
+                <%= link_to "Delete", user_listing_path(user_id: current_user, id: x.id), method: :delete %> 
+           <% end %>   
+      </div>
+    </div>
+  </div>
 </div>
